Better names for test plays

--- a/playbooks/test_role_s3_access.yml
+++ b/playbooks/test_role_s3_access.yml
@@ -13,21 +13,21 @@
       ansible.builtin.debug:
         msg: "Secret Key: {{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}   Access: {{ lookup('env', 'AWS_ACCESS_KEY_ID') }}    Token: {{ lookup('env', 'AWS_SESSION_TOKEN') }}    Token: {{ lookup('env', 'AWS_SECURITY_TOKEN') }}"
 
-    - name: Get S3 bucket info aaa
+    - name: Get S3 bucket info with env vars
       amazon.aws.s3_bucket_info:
         access_key: "{{ lookup('env', 'AWS_ACCESS_KEY_ID') }}"
         secret_key: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}"
         session_token: "{{ lookup('env', 'AWS_SECURITY_TOKEN') }}"
       register: result_easy
 
-    - name: Dump bucket info aaa
+    - name: Dump bucket info with env vars
       ansible.builtin.debug:
         var: result_easy
 
-    - name: Get S3 bucket info
+    - name: Get S3 bucket info native
       amazon.aws.s3_bucket_info:
       register: result
 
-    - name: Dump bucket info
+    - name: Dump bucket info native
       ansible.builtin.debug:
         var: result
